<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="senai.com.calculomedia.CalculoMediaMainActivity" >

    <EditText
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/textView1"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/nome"
        android:layout_alignRight="@+id/nome" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:text="@string/button_calcular" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nota4"
        android:layout_marginTop="61dp"
        android:layout_toLeftOf="@+id/nota4"
        android:text="@string/media"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/nome"
        android:layout_marginTop="70dp"
        android:text="@string/nota1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nota3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/nota4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/media"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nota4"
        android:layout_alignBottom="@+id/nota4"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/nota4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nota4"
        android:layout_below="@+id/nota2"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nota1"
        android:layout_alignBottom="@+id/nota1"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/nota3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/nota3"
        android:layout_marginTop="38dp"
        android:text="@string/nota2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/nome"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>